--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ databindingRuntime = "8.8.0"
 library = "3.2.0-alpha11"
 google-services = "4.4.2"
 firebaseStorageKtx = "21.0.1"
+playServicesMeasurementApi = "22.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -45,6 +46,7 @@ androidx-databinding-runtime = { group = "androidx.databinding", name = "databin
 androidx-library = { group = "androidx.databinding", name = "library", version.ref = "library" }
 material-v1110 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebaseStorageKtx" }
+play-services-measurement-api = { group = "com.google.android.gms", name = "play-services-measurement-api", version.ref = "playServicesMeasurementApi" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
